fill out pages, adjust formating

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">		
         
-        <title>Vikram Manikantan</title>
+        <title>Vikram Manikantan: Computational Astrophysicist</title>
         <link rel="icon" type="image/x-icon" href="images/pixel.png" style="height: 50; width: 50; aspect-ratio: 1;">
         <link rel="icon" type="image/x-icon" href="images/pixel.png" style="height: 50; width: 50; aspect-ratio: 1;">
         <link rel="stylesheet" href="assets/css/main.css" />
@@ -27,14 +27,13 @@
         </script>
 
         <div class="grid-container">
+            <div class="landing">
 
-            <div class="landing" style="background-color: white;">
-
-                <div class="image" style="width: 40%; background-color:white;">
-                    <img src="images/vikram2.jpg" alt="Vikram Manikantan" style="width: 100%; max-width: 350px; display: block; object-fit: cover; border-radius: 50%;">
+                <div class="image" style="width: 40%; min-width: 375px;">
+                    <img src="images/vikram2.jpg" alt="Vikram Manikantan" style="width: 100%; max-width: 350px; display: block; object-fit: cover; border-radius: 50%; padding-bottom: 10px;">
                 </div>
 
-                <div style="width: 60%; background-color:white;">
+                <div style="width: 60%; min-width: 375px">
                     <p>My name is <mark>Vikram Manikantan</mark>. I am an </p>
                     <h2>Astrophysics PhD Candidate</h2>
                     <p> at <a href="https://astro.arizona.edu/">Steward Observatory</a>, at the University of Arizona. I study</p>
