--- a/outreach.html
+++ b/outreach.html
@@ -41,20 +41,15 @@
                     </p>
                 </div>
 
-                <div class="square">
-                    <h3><a href="https://timestep.arizona.edu/programs/timestep-research-apprenticeship" target="_blank">TIMESTEP Research Apprenticeship</a></h3>
-                    <p><mark>Graduate Student Coordinator</mark> of the Research Apprenticeship program; a mentorship program that provides second year undergraduates with a paid opportunity to build technical and professional skills applicable to both research and industry.</p>
-                </div>
-                <div class="square">
-                    <h3><a href="compass.html" target="_blank">COMPASS</a></h3>
-                    <p><mark>Co-organizer and instructor</mark> for COMPASS, a computational and mathematical workshop for incoming undergraduates that aims to remove barriers to entering STEM by providing necessary technical training.</p>
-                </div>
-                <div class="square">
-                    <h3><a href="https://twitter.com/StewardAstro">Steward Social Media</a></h3>
-                    <p><mark>Graduate Student Lead</mark> for Steward Observatory's new social media initiative which includes creating and running our <a href="https://www.instagram.com/stewardobservatory">Instagram</a>, <a href="https://twitter.com/StewardAstro">Twitter</a>, <a href="https://bsky.app/profile/stewardobservatory.bsky.social">Bluesky</a> and <a href="https://www.facebook.com/StewardAstronomy/">Facebook</a> accounts, as well as developing content to post three times a week.</p>
-                </div>
-                <div class="square">
-                    <h3><a href="https://timestep.arizona.edu/programs/timestep-summer-tech-internship" target="_blank">TIMESTEP Internship</a></h3>
+                <div class="content" style="width: 100%; margin: auto;">
+
+                    <h2>Astronomy on Tap [<a href="https://timestep.arizona.edu/programs/timestep-research-apprenticeship" target="_blank">video</a>]</h2>
+                    <p>Speaker at Space Draft number [number here], Tucson's flavor of astronomy on tap</p>
+
+                    <h2>Steward Social Media [<a href="https://twitter.com/StewardAstro">Twitter</a>]</h2>
+                    <p><mark>Graduate Student Lead</mark> for Steward Observatory's new social media initiative which includes creating and running our <a href="https://www.instagram.com/stewardobservatory">Instagram</a>, <a href="https://twitter.com/StewardAstro">Twitter</a>, <a href="https://bsky.app/profile/stewardobservatory.bsky.social">Bluesky</a> and <a href="https://www.facebook.com/StewardAstronomy/">Facebook</a> accounts, as well as developing content to post up to three times a week.</p>
+
+                    <h2>TIMESTEP Internship [<a href="https://timestep.arizona.edu/programs/timestep-summer-tech-internship" target="_blank">website</a>]</h2>
                     <p><mark>Graduate Student Coordinator</mark> of the Summer Tech Internship program; a mentorship program supporting undergraduates entering the STEM workforce by matching them with companies for a summer internship and providing a support structure.</p>
                 </div>
                     
