--- a/research.html
+++ b/research.html
@@ -47,8 +47,11 @@
             </div> -->
 
             <div class="section" id="research"> 
+                <div class="crop">
+                    <img src="images/bh_image.png" alt="Binary Black Hole" style="width: 100%; display: block;">
+                </div>
                 <h1>Research </h1>
-                <div class="content">
+                <div class="content" style="width: clamp(375px, 100%, 1000px);">
                     <p>
                         I am a theoretical and computational astrophysicist whose research focuses on the multi-messenger nature of compact objects such as supermassive (binary) black holes. I use numerical relativity and magnetohydrodynamic codes, such as Einstein Toolkit, IllinoisGRMHD, and H-AMR, to simulate these systems from first principles. 
                     </p>
@@ -56,8 +59,16 @@
                         Currently, I am studying accretion onto supermassive binary black holes, with the goal of identifying unique electromagnetic signals from these systems. We study these systems by solving Einstein's equations of general relativity to accurately model the spacetime, and then evolving the magnetohydrodynamic equations on the curved spacetime to simulate the accretion flow. 
                     </p>
                 </div>
-                <div class="image">
-                    <img src="images/bh_image.png" alt="Binary Black Hole" style="width: 90%; display: block;">
+
+                <div class="content">
+                    <h2> Magnetically Arrested Minidisks</h2>
+                    <p> description and movies here</p>
+
+                    <h2> Coincident Multimessenger Bursts from Eccentric Supermassive Binary Black Holes</h2>
+                    <p> description and movies here</p>
+
+                    <h2> Effects of Eccentricity on Accreting Binary Black Holes</h2>
+                    <p> description and movies here</p>
                 </div>
 
                 <h1 style="height: 20px;"> </h1>
