--- a/teaching.html
+++ b/teaching.html
@@ -37,8 +37,31 @@
                         To do this, I have taken leadership roles in several programs at the University of Arizona, including the <a href="https://timestep.arizona.edu/programs/timestep-research-apprenticeship" target="_blank">TIMESTEP Research Apprenticeship</a> program and the <a href="">Computational and Mathematical Program for incoming Arizona Science Students</a> (COMPASS). I am also interested in, and attended a workshop on, developing <a href="https://ur.arizona.edu/content/course-based-research-undergraduate-experiences-cures"> Course-based Undergraduate Research Experiences</a> (CUREs) to increase undergraduate research opportunities. 
                     </p>
                 </div>
-                    
-                
+
+                <h2> Computational and Mathematical Program for incoming Arizona Science Students </h2>
+                <p>
+                    text here
+                </p>
+
+                <h2>
+                    TIMESTEP Research Apprenticeship 
+                    [<a href="https://timestep.arizona.edu/programs/timestep-research-apprenticeship" target="_blank">website</a>]
+                </h2>
+                <p>
+                    <mark>Graduate Student Coordinator</mark> of the Research Apprenticeship program; a mentorship program that provides second year undergraduates with a paid opportunity to build technical and professional skills applicable to both research
+                </p>
+
+                <h2> Astro 300A: Dynamics </h2>
+                <p>
+                    text here
+                </p>
+
+
+                <h2> Astro 202: Life in the Universe </h2>
+                <p>
+                    text here
+                </p>
+
             </div>
 
         </div>
