--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,8 @@
             .then(html => document.getElementById("navbar-container").innerHTML = html);
         </script>
 
-        <div class="grid-container">
-            <div class="section" id="contact">
+        <div class="grid-container" style="min-height: 92vh;">
+            <div class="section" id="contact"  style="align-content: flex-start;">
                 <h1> Contact </h1>
                 <div class="content">
                     <p>
