add class slides; add space drafts slides, combine outreach and music, tbc

--- a/outreach.html
+++ b/outreach.html
@@ -29,12 +29,18 @@
             <div class="section" id="outreach">
                 <h1> Public Outreach </h1>
 
-                <div class="content" style="width: 100%; margin: auto;">
+                <div class="content" style="width: 100%; margin: auto; flex-direction: row;">
 
-                    <h2>Astronomy on Tap [<a href="https://www.youtube.com/live/xdDyrJsMcR4?si=JGNTEoBLXJqK-WhK&t=2667" target="_blank">recording</a>]</h2>
+                    <h2>Astronomy on Tap </h2>
+                    <p>[<a class="nu" href="https://www.youtube.com/live/xdDyrJsMcR4?si=JGNTEoBLXJqK-WhK&t=2667" target="_blank">recording</a>] [<a class="nu" href="files/spacedrafts107.pdf">slides</a>]</p>
+
                     <p>Speaker at Space Draft #107, Tucson's flavor of astronomy on tap. </p>
 
-                    <img src="images/spacedrafts.png" alt="Astronomy on Tap Tucson" style="width: 100%; display: block; margin-left: auto; margin-right: auto; padding-bottom: 15px;">
+                    <div class="image-row">
+                        <img src="images/spacedrafts.png" alt="Astronomy on Tap Tucson">
+                        <img src="images/spacedrafts_timeline.png" alt="Astronomy on Tap Tucson">
+                    </div>
+
 
                     <h2>Steward Social Media [<a href="https://twitter.com/StewardAstro">Twitter</a>]</h2>
                     <p><mark>Graduate Student Lead</mark> for Steward Observatory's new social media initiative which includes creating and running our <a href="https://www.instagram.com/stewardobservatory">Instagram</a>, <a href="https://twitter.com/StewardAstro">Twitter</a>, <a href="https://bsky.app/profile/stewardobservatory.bsky.social">Bluesky</a> and <a href="https://www.facebook.com/StewardAstronomy/">Facebook</a> accounts, as well as developing content to post up to three times a week.</p>
