--- a/teaching.html
+++ b/teaching.html
@@ -28,7 +28,7 @@
 
 
             <div class="section" id="teaching">
-                <h1> Teaching </h1>
+                <h1> Teaching/Mentorship </h1>
                 <div class="content" style="width: 100%; margin: auto;">
                     <p>
                         I am passionate about developing programs that increase undergraduate students success in astrophysics research. I currently focus on two aspects of this: 1. training students with <mark style="background-color: var(--highlight-dark);">fundamental skills</mark> needed to perform leading research, and 2. providing mentorship and a support structure to create <mark style="background-color: var(--highlight-dark);">sustainable success</mark> and increase retention of underrepresented groups.
@@ -38,22 +38,37 @@
                     </p>
                 </div>
 
-                <h2> Computational and Mathematical Program for incoming Arizona Science Students </h2>
+                <h2> 
+                    COMPASS: Computational and Mathematical Program for incoming Arizona Science Students 
+                </h2>
                 <p>
-                    text here
+                    [<a class="nu" href="https://arizona-relativity.github.io/extras/compass.html">Website</a>] 
+                    [<a class="nu" href="https://github.com/arizona-relativity/compass">Github</a>]
                 </p>
+                <p>
+                    In its first two iterations, COMPASS was a week-long workshop for incoming Arizona Science students to learn fundamental programming and computational skills needed for success in research and coursework. As a graduate student mentor, I helped develop the curriculum, designed work-along jupyter notebooks, and led several sessions on Python programming, data analysis, and visualization.
+                </p>
+                <p>
+                    You can find interactive Python notebooks I developed on <a href="https://colab.research.google.com/drive/1Usb8Kb2WwW-CPDYKnxulZc0f7beIYsDT">Python basics</a> and <a href="https://colab.research.google.com/drive/1QNzVruPZmIiatEZeYDB3AjEj0Ao0ZSc2"> Numpy and Matplotlib</a>. 
+                </p>
+                <img src="images/compass.jpg" alt="COMPASS" style="width: 100%; display: block; margin-left: auto; margin-right: auto; padding-bottom: 15px;">
 
                 <h2>
                     TIMESTEP Research Apprenticeship 
-                    [<a href="https://timestep.arizona.edu/programs/timestep-research-apprenticeship" target="_blank">website</a>]
                 </h2>
+                <p>
+                    [<a class="nu" href="https://timestep.arizona.edu/programs/timestep-research-apprenticeship" target="_blank">website</a>]
+                </p>
                 <p>
                     <mark>Graduate Student Coordinator</mark> of the Research Apprenticeship program; a mentorship program that provides second year undergraduates with a paid opportunity to build technical and professional skills applicable to both research
                 </p>
 
                 <h2> Astro 300A: Dynamics </h2>
                 <p>
-                    text here
+                    [<a class="nu" href="files/astro300a1.pdf" target="_blank">lecture 1</a>] [<a class="nu" href="files/astro300a2.pdf" target="_blank">lecture 2</a>]
+                </p>
+                <p>
+                    Teaching assistant for Professor Kate Daniel for Astro 300A: Dynamics in Spring 2025 and Spring 2026. 
                 </p>
 
 
@@ -61,6 +76,10 @@
                 <p>
                     text here
                 </p>
+
+                <h2>TIMESTEP Internship</h2> 
+                <p>[<a href="https://timestep.arizona.edu/programs/timestep-summer-tech-internship" target="_blank">website</a>]</p>
+                <p><mark>Graduate Student Coordinator</mark> of the Summer Tech Internship program; a mentorship program supporting undergraduates entering the STEM workforce by matching them with companies for a summer internship and providing a support structure.</p>
 
             </div>
 
