add talks; edit formatting

--- a/teaching.html
+++ b/teaching.html
@@ -46,7 +46,7 @@
                     [<a class="nu" href="https://github.com/arizona-relativity/compass">Github</a>]
                 </p>
                 <p>
-                    In its first two iterations, COMPASS was a week-long workshop for incoming Arizona Science students to learn fundamental programming and computational skills needed for success in research and coursework. As a graduate student mentor, I helped develop the curriculum, designed work-along jupyter notebooks, and led several sessions on Python programming, data analysis, and visualization.
+                    In its first two iterations, COMPASS was a week-long workshop for incoming Arizona Science students to learn fundamental programming and computational skills needed for success in research and coursework. As a <mark>co-organizer and instructor</mark>, I developed the Python and data visualization aspect of the curriculum by designing work-along jupyter notebooks and leading several sessions on Python programming, data analysis, and visualization.
                 </p>
                 <p>
                     You can find interactive Python notebooks I developed on <a href="https://colab.research.google.com/drive/1Usb8Kb2WwW-CPDYKnxulZc0f7beIYsDT">Python basics</a> and <a href="https://colab.research.google.com/drive/1QNzVruPZmIiatEZeYDB3AjEj0Ao0ZSc2"> Numpy and Matplotlib</a>. 
@@ -63,23 +63,28 @@
                     <mark>Graduate Student Coordinator</mark> of the Research Apprenticeship program; a mentorship program that provides second year undergraduates with a paid opportunity to build technical and professional skills applicable to both research
                 </p>
 
-                <h2> Astro 300A: Dynamics </h2>
+                <h2> 
+                    Astro 300A: Dynamics 
+                </h2>
                 <p>
-                    [<a class="nu" href="files/astro300a1.pdf" target="_blank">lecture 1</a>] [<a class="nu" href="files/astro300a2.pdf" target="_blank">lecture 2</a>]
+                    [<a class="nu" href="files/astro300a1.pdf" target="_blank">lecture 1</a>] [<a class="nu" href="files/astro300a2.pdf" target="_blank">lecture 2</a>] 
                 </p>
                 <p>
-                    Teaching assistant for Professor Kate Daniel for Astro 300A: Dynamics in Spring 2025 and Spring 2026. 
+                    <mark>Teaching Assistant</mark> for <a href="https://astro.arizona.edu/person/kathryne-j-daniel">Professor Kate Daniel</a> in Spring 2025 and Spring 2026. As the TA, I held office hours, updated and graded all homework assignments, and provided feedback on over 25 students' solutions.
+                </p>
+                <p>
+                    Significantly, I designed and gave two lectures connecting the class material to my current research on supermassive binary black holes. The <a href="files/astro300a1.pdf" target="_blank">first lecture</a> covered dynamical interactions that drive the inspiral of supermassive binary black holes: I walked them through an order-of-mag estimate of dynamical friction timescales and compared it to the gravitational wave inspiral timescale. The goal was to demonstrate how professional astrophysicists gain intuition for complicated systems. The <a href="files/astro300a2.pdf" target="_blank">second lecture</a> covered the methods I use in my current research. The goal was to demonstrate how research is performed (in one specific method) at the forefront of the field.
                 </p>
 
 
                 <h2> Astro 202: Life in the Universe </h2>
                 <p>
-                    text here
+                    <mark>Teaching Assistant</mark> for <a href="https://astro.arizona.edu/person/laird-close">Professor Laird Close</a> in Fall 2025. 
                 </p>
 
-                <h2>TIMESTEP Internship</h2> 
+                <!-- <h2>TIMESTEP Internship</h2> 
                 <p>[<a href="https://timestep.arizona.edu/programs/timestep-summer-tech-internship" target="_blank">website</a>]</p>
-                <p><mark>Graduate Student Coordinator</mark> of the Summer Tech Internship program; a mentorship program supporting undergraduates entering the STEM workforce by matching them with companies for a summer internship and providing a support structure.</p>
+                <p><mark>Graduate Student Coordinator</mark> of the Summer Tech Internship program; a mentorship program supporting undergraduates entering the STEM workforce by matching them with companies for a summer internship and providing a support structure.</p> -->
 
             </div>
 
